stesura sezione menu sx + header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     <title>Spotify</title>
 </head>
 <body>
-    
+    <nav>
+        <div class="top-menu">
+            <img src="./asset/img/logo-small.svg" alt="Logo spotify piccolo" class="logo-spotify-small">
+            <div class="menu-logos">
+                <img src="./asset/img/logo.svg" alt="logo spotify regular" class="logo-spotify-regular">
+                <img src="./asset/img/home.svg" alt="logo home" class="logo-home">
+                <span>Home</span>
+                <img src="./asset/img/search.svg" alt="pulsante di ricerca" class="search-home">
+                <span>Cerca</span>
+                <img src="./asset/img/libreria.svg" alt="la tua libreria" class="library-home"> 
+                <span>La tua libreria</span>
+            </div>   
+        </div>
+        <div class="bottom-menu">
+            <div class="menu-logos">
+                <img src="./asset/img/download.svg" alt="bottone download" class="download-home">
+                <span>Installa App</span>
+                <img src="./asset/img/profile.svg" alt="immagine profilo utente" class="profile-home">
+                <span>John Doe</span>
+            </div>
+            
+        </div>
+    </nav>
+
+    <header>
+        <div>effettua l'upgrade</div>
+    </header>
 </body>
 </html>
