modifiche varie e inizio input range

--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
         <div class="left-side"> <!-- Parte Sinistra -->
             <img src="./asset/img/sinister.jpeg" alt="brano in riproduzione" class="playing-song">
             <div class="song-description">
-                <p>Sinister</p>
-                <div>Brano</div>
-                <div>Nome</div> 
+                <p class="active">Sinister</p>
+                <div class="active">Brano</div>
+                <div class="active">Nome</div> 
             </div>
             <div class="add-playlist">
                 <i class="fa-regular fa-heart"></i>
@@ -214,12 +214,13 @@
                 <i class="fa-solid fa-forward-step"></i>
                 <i class="fa-solid fa-rotate-right"></i>
             </div>
-            
-            <div class="song-progress"> <!-- Barra di progressione -->
+            <!-- Barra di progressione -->
+            <!-- <div class="song-progress"> 
                 <span>0:25</span>
                 <div class="progress bar"><div class="time level"></div></div>
                 <span>4:35</span>
-            </div>
+            </div>  -->
+            
         </div>
 
         <div class="right-side"> <!-- Parte Destra -->
