modifica alla barra di riproduzione con in. range

--- a/index.html
+++ b/index.html
@@ -213,14 +213,16 @@
                 <i class="fa-solid fa-rotate-right"></i>
             </div>
             <!-- Barra di progressione -->
-            <div class="song-progress"> 
+            <!-- <div class="song-progress"> 
                 <span>0:25</span>
                 <div class="progress bar"><div class="time level"></div></div>
                 <span>4:35</span>
-            </div> 
-            <!-- <div class="song-progress-bar">
-                <input class="progress-bar slider-progress" type="range" style="width: 100%; --value:39; --min:0; --max:100;">
-            </div> -->
+            </div>  -->
+            <div class="song-progression">
+                <span>0:25</span>
+                <input type="range" min="0" max="40" step="any">
+                <span>4:25</span>
+            </div>
             
         </div>
 
